<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/order_detail"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    android:padding="8dp"
    tools:context="co.llanox.alacartaexpress.admin.presentation.OrderDetailFragment">


    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_general_order_info"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        card_view:cardCornerRadius="4dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:columnCount="10"
            android:rowCount="10"            >

            <TextView
                android:id="@+id/tv_lb_order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_order_number"
                android:textStyle="bold"
                android:layout_column="0"
                android:layout_row="0"

                />

            <TextView
                android:id="@+id/tv_order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Iakkaka"
                android:layout_column="0"
                android:layout_row="1"
                />



            <TextView
                android:id="@+id/tv_lb_order_buyer_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_order_buyer_info"
                android:textStyle="bold"
                android:layout_column="0"
                android:layout_row="2"
                />

            <TextView
                android:id="@+id/tv_order_buyer_info"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="90299302-Juan Pineda"
                android:layout_column="0"
                android:layout_row="3"
                />



            <TextView
                android:id="@+id/tv_lb_scheduled_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_scheduled_order"
                android:textStyle="bold"
                android:layout_column="0"
                android:layout_row="4"
                />

            <TextView
                android:id="@+id/tv_scheduled_time_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2014/01/26 4:00 pm"
                android:layout_column="0"
                android:layout_row="5"
                />

            <TextView
                android:id="@+id/tv_lb_delivery_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_order_delivery_address"
                android:textStyle="bold"
                android:layout_column="0"
                android:layout_row="6"
                />

            <TextView
                android:id="@+id/tv_delivery_address"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="condominio pakande casa 1B mzn M. Calle de las Palmaditas"
                android:layout_column="0"
                android:layout_row="7"
                />
            <TextView
                android:id="@+id/tv_lb_customer_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_customer_phone"
                android:layout_marginLeft="8dp"
                android:textStyle="bold"
                android:layout_column="1"
                android:layout_row="2"
                />

            <TextView
                android:id="@+id/tv_order_customer_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="3102080690"
                android:layout_column="1"
                android:layout_row="3"
                />



            <TextView
                android:id="@+id/tv_lb_customer_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_customer_info"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:layout_column="1"
                android:layout_row="0"
                />

            <TextView
                android:id="@+id/tv_order_customer_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Julio Pineda"
                android:layout_marginLeft="8dp"
                android:layout_column="1"
                android:layout_row="1"
                />





            <TextView
                android:id="@+id/tv_lb_order_created_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_order_date"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:layout_column="1"
                android:layout_row="4"

                />

            <TextView
                android:id="@+id/tv_order_created_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2014/01/26 4:00 pm"
                android:layout_marginLeft="8dp"
                android:layout_column="1"
                android:layout_row="5"

                />

            <TextView
                android:id="@+id/tv_lb_cash_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_cash_amount"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_column="1"
                android:layout_row="6"

                />

            <TextView
                android:id="@+id/tv_cash_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_cash_amount"
                android:layout_marginStart="8dp"
                android:layout_column="1"
                android:layout_row="7"

                />



        </GridLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_general_store_info"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"

            >

            <TextView
                android:id="@+id/tv_lb_store_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_store_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_store_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Barandales" />

            <TextView
                android:id="@+id/tv_lb_store_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_store_address"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_store_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Calle 56 78 90 apto 201" />

            <TextView
                android:id="@+id/tv_lb_store_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_store_phone"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_store_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3102080690" />

            <TextView
                android:id="@+id/tv_lb_store_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_store_city"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_store_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Villavicencio" />

        </LinearLayout>

     </androidx.cardview.widget.CardView>




</LinearLayout>
