<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/component_rounded"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/txt_order_id"
        android:textSize="@dimen/content_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_order_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txt_order_created_at"
        android:textSize="@dimen/content_text_size"
        android:textStyle="bold"
        android:layout_alignLeft="@+id/tv_order_state"
        android:layout_alignStart="@+id/tv_order_state" />

    <TextView
        android:id="@+id/tv_order_buyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_below="@id/tv_order_id"
        android:text="@string/txt_order_buyer_info"
        android:textSize="@dimen/content_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_order_state"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/requested_order_rounded_text_view"
        android:text="@string/txt_order_state_default"
        android:textSize="@dimen/content_text_size"
        android:layout_alignBottom="@+id/tv_order_buyer_info" />

    <TextView
        android:id="@+id/tv_order_buyer_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_order_buyer"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="4dp"
        android:maxLines="4"
        android:text="@string/txt_placed_order_demo_buyer_info"
        android:textSize="@dimen/content_text_size" />





</RelativeLayout>