<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/footerViewOrder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/component_rounded">


    <TextView
        android:id="@+id/tv_order_resquests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_order_requests"
        android:layout_alignLeft="@+id/tv_order_requests"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/tv_order_requests"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="8dp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:text="@string/txt_order_description"
        android:textSize="@dimen/content_text_size" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_order_resquests"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:text="txt_total_order" />

    <TextView
        android:id="@+id/tv_lb_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_order_resquests"
        android:layout_alignLeft="@+id/tv_order_resquests"
        android:layout_alignStart="@+id/tv_order_resquests"
        android:layout_marginRight="16dp"
        android:layout_toLeftOf="@+id/tv_total"
        android:gravity="right"
        android:text="@string/txt_total"
        android:textSize="@dimen/content_text_size" />


    <TextView
        android:id="@+id/tv_delivery_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_total"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:layout_toEndOf="@+id/tv_lb_delivery_cost"
        android:layout_toRightOf="@+id/tv_lb_delivery_cost"
        android:gravity="right"
        android:text="txt_total_order"
        android:textSize="@dimen/content_text_size" />

    <TextView
        android:id="@+id/tv_lb_delivery_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_lb_total"
        android:layout_alignEnd="@+id/tv_lb_total"
        android:layout_alignLeft="@+id/tv_order_resquests"
        android:layout_alignRight="@+id/tv_lb_total"
        android:layout_alignStart="@+id/tv_order_resquests"
        android:gravity="right"
        android:text="@string/txt_delivery_cost"
        android:textSize="@dimen/content_text_size" />


    <TextView
        android:id="@+id/tv_order_requests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_above="@+id/btn_area"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:padding="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="8dp"
        android:hint="@string/hint_additional_requests"
        android:inputType="textMultiLine"
        android:textSize="@dimen/content_text_size"
        android:text="@string/hint_additional_requests" />



    <TextView
        android:id="@+id/tv_lb_order_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_lb_delivery_cost"
        android:layout_alignEnd="@+id/tv_lb_delivery_cost"
        android:layout_alignLeft="@+id/tv_order_resquests"
        android:layout_alignRight="@+id/tv_lb_delivery_cost"
        android:layout_alignStart="@+id/tv_order_resquests"
        android:gravity="right"
        android:text="@string/txt_order_cost"
        android:textSize="@dimen/content_text_size"

        />

    <TextView
        android:id="@+id/tv_order_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_delivery_cost"
        android:layout_alignEnd="@+id/tv_delivery_cost"
        android:layout_alignRight="@+id/tv_delivery_cost"
        android:layout_toRightOf="@+id/tv_lb_delivery_cost"
        android:gravity="right"
        android:text="txt_total_order"
        android:textSize="@dimen/content_text_size" />

    <LinearLayout
        android:id="@+id/btn_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"

        >

        <Button
            android:id="@+id/btn_cancel_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@color/bg_button"
            android:text="@string/txt_cancel_order"
            android:textColor="@color/bg_light"
            android:textSize="@dimen/content_text_size" />

        <Button
            android:id="@+id/btn_request_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@color/bg_button"
            android:text="@string/txt_request_order"
            android:textColor="@color/bg_light"
            android:textSize="@dimen/content_text_size" />


    </LinearLayout>



</RelativeLayout>